--- a/task-02.html
+++ b/task-02.html
@@ -9,6 +9,8 @@
     <style>
       .item {
         font-weight: 500;
+        list-style: none;
+        color: blue;
       }
 
       .item:not(:last-child) {
